# acp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISTRIBUTION_SCOPE.md  GOVERNANCE.md  Makefile  README.md  README_JA.md  pyproject.toml  requirements-conformance.txt
release/distribution_bundle/: README.md  README_ja.md  pyproject.toml
release/distribution_bundle/conformance/: README.md  harness_contract_v1.json  report.schema.json
release/distribution_bundle/conformance/manifests/: phase3.vector-manifest.json
release/distribution_bundle/conformance/profiles/: phase1.profile.json  phase3.profile.json
release/distribution_bundle/docs/: README.md
release/distribution_bundle/docs/en/: 00_package_baseline.md  01_message_map.md  06_comparison_matrix_short.md  10_schema_release_plan.md  11_faq_top5.md  12_readme_repo_ready.md  13_objection_memo.md  15_real_world_impact.md  17_v1_release_policy.md  18_security_ops_minimum_runbook.md  20_post_v1_roadmap.md  22_harness_implementation_guide.md  24_conformance_certification.md  25_integration_patterns.md  26_certification_test_suite.md  README.md
release/distribution_bundle/docs/ja/: 01_message_map.md  02_launch_copy_bank.md  04_share_faq.md  11_faq_top5.md  (+14 more)
release/distribution_bundle/examples/: README.md
release/distribution_bundle/schemas/: README.md
release/distribution_bundle/scripts/: conformance.sh  conformance_selftest.sh  cross_version_compat.sh  external_release_gate.sh  install_conformance_deps.sh  mock_external_runner.sh  production_runner_compare.sh  security_ops_minimum.sh  validate_examples.sh
(+379 files in other folders)
