[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acp-project"
version = "1.0.0"
description = "ACP accountability schemas, conformance profiles, and release tooling."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "ACP Maintainers" }]
keywords = ["acp", "accountability", "conformance", "schema"]
dependencies = []

[project.optional-dependencies]
conformance = [
  "jsonschema==4.23.0",
  "PyYAML==6.0.2",
]
