[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acp-sdk"
version = "0.1.0"
description = "Minimal ACP Python SDK for artifact validation and report parsing."
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.23,<5",
]
license = {text = "Apache-2.0"}

[project.scripts]
acp = "acp_sdk.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["acp_sdk*"]

[tool.setuptools.package-data]
acp_sdk = ["py.typed"]
